testsuite/tests/parser/should_fail/MultilineStringsInnerTab.stderr

MultilineStringsInnerTab.hs:8:5: error: [GHC-21231]
    lexical error in string/character literal at character '\t'
